kubernetes/ufoo/50-payload/apps/n8n/ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-http
  namespace: n8n
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`n8n.agrrh.com`) || Host(`n8n.5426b488.nip.io`)
      middlewares:
        - name: whitelist
          namespace: traefik
      services:
        - kind: Service
          name: n8n
          namespace: n8n
          port: 80
